# Open-i_chestxray_multimodal

./: .gitattributes  .gitignore  .lfsconfig  Diagramme_du_planning.md  Diagramme_planning.md  README.md  SUIVI.md  planning.md  pyproject.toml  requirements-lock.txt  requirements.txt  suivi.md
API/medical-api/: main.py  requirements-base.txt  requirements.txt
Text classification/: .gitignore  architecture_nlp_pipeline.md  dataset_labeled.csv  finetune.py  first_phases.ipynb  kfold.py  labeliser.py  model.py  pretrain.py
Text classification/data/: __init__.py  dataset_reports.csv  datasets.py  labeliser.py
Text classification/models/: __init__.py  bert_mlm.py  classifier.py  layers.py
Text classification/notebooks/: Deep_learning_Nlp_TFIDF.ipynb
Text classification/scripts/: cxr_bert.py  finetune.py  kfold.py  pretrain.py
data/: README.md
data_set_dicom/: dicom_.ipynb
dicom_volume/: Preprocess_DICOM_to_Volumes_3D.ipynb
doc/: architectures_fusion_multimodale_v3.md
docs/: LFS_WORKFLOW.md  architectures_fusion_multimodale_v3.md  cluster_ml_pipeline.md  planning.md
docs/meetings/: First meeting (13.03.2026).html
docs/report/: report_cv_multimodal.tex  report_summary.tex
figures/: generate_result_figures.py
image classification (png)/: Artishow_pytorch_custom_datasets.ipynb  cv_model_01.ipynb  cv_model_vit.ipynb  readme.md
image classification (png)/Dataset/: readme.md
image classification (png)/Own created model/: readme.md  requirements.txt
image classification (png)/Vfinalemodel/: test.docx
image_preprocess/: merged_df_meta.csv  new_dataset.csv
logs/: mm-qformer_860269.err  mm-qformer_860271.err  mm-qformer_860271.out  mm-qformer_860274.err  mm-qformer_860274.out  mm-qformer_860276.err  mm-qformer_860276.out  mm-qformer_861909.err  mm-qformer_861909.out  mm-qformer_861912.err  mm-qformer_861912.out  mm-qformer_861913.err  mm-qformer_861913.out  mm-qformer_861999.err  mm-qformer_861999.out  mm-qformer_862466.err  mm-qformer_862466.out  mm-qformer_862616.err  mm-qformer_862616.out  mm-qformer_864056.err  mm-qformer_864056.out  mm-qformer_864079.err  mm-qformer_864079.out
models/: README.md
models/api/: model_full.pth
multimodal_fusion/: train.py
projet_dicom/: Artishow_Colab_DICOM_Preprocessing.ipynb  Artishow_Colab_Dataset_Analysis.ipynb  Colab_PNG_Label_Mapping.ipynb  README.md  README_PREPROCESSING.md  config.py  dataset.py  dicom_labels.csv  enrich_dataset_with_xml.py  extract_labels.py  main.py  models_arch.py  png_files_list.csv  preprocessing_dicom_multiwindow.py  requirements.txt  test_dicom_windowing.py  trainer.py
scripts/: job_image_classification.sh
src/mmmia/: __init__.py
(+71 files in other folders)
