[project]
name = "mmmia"
version = "0.1.0"
description = "MM-MIA — Multi-Modal Medical Imaging Analysis (Télécom Paris, proj104 2025-2026)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Équipe MM-MIA proj104 2025-2026" },
]
license = { text = "Proprietary" }

# Dépendances directes (de haut niveau).
# Pour les versions exactes utilisées en prod / reproductibilité, voir requirements-lock.txt
dependencies = [
    # Deep learning
    "torch>=2.0",
    "torchvision>=0.15",
    "pytorch-lightning>=2.0",
    "torchmetrics>=1.0",
    "torchxrayvision>=1.0",

    # NLP / Transformers
    "transformers>=4.30",
    "tokenizers>=0.13",
    "huggingface_hub>=0.16",
    "safetensors>=0.3",
    "spacy>=3.5",

    # Imagerie médicale
    "pydicom>=2.4",
    "scikit-image>=0.20",
    "Pillow>=9.5",
    "opencv-python>=4.7",
    "tifffile>=2023.0",
    "ImageIO>=2.30",

    # Data science
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",

    # API (medical-api)
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.0",
    "python-multipart>=0.0.6",

    # Utils
    "requests>=2.30",
    "httpx>=0.24",
    "tqdm>=4.65",
    "typer>=0.9",
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.5",
    "pre-commit>=3.3",
    "nbstripout>=0.6",
]
notebook = [
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipykernel>=6.25",
    "ipywidgets>=8.0",
]
all = ["mmmia[dev,notebook]"]

[project.urls]
Repository = "https://gitlab.enst.fr/proj104/2025-2026/MM-MIA"
Mirror = "https://github.com/chaotiquetaurus/Open-i_chestxray_multimodal"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mmmia*"]

# ============================================================
# Tooling
# ============================================================

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "**/notebooks/*",
    "**/venv/*",
    "data/",
    "models/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = "(notebooks|venv|data|models)/"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --strict-markers"
